Adding documentation with swag, on expenseOrigin endpoint
